Fix text align bio p

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -308,7 +308,7 @@ footer p {
     color: #525252;
     margin-right: 10px;
     margin-left: 10px;
-    text-align: left;
+    text-align: justify;
 }
 
 
